project(stormbird)

add_library(stormbird SHARED)
target_compile_definitions(stormbird PRIVATE DRAGON_LIBRARY_NAME="stormbird")
if(MSVC)
    generate_export_header(stormbird BASE_NAME STORMBIRD DEFINE_NO_DEPRECATED EXPORT_FILE_NAME ${PROJECT_SOURCE_DIR}/autogen/export_win32.h)
else()
    generate_export_header(stormbird BASE_NAME STORMBIRD DEFINE_NO_DEPRECATED EXPORT_FILE_NAME ${PROJECT_SOURCE_DIR}/autogen/export_clang.h)
endif()
target_include_directories(stormbird PUBLIC ${PROJECT_SOURCE_DIR}/public)
add_subdirectory("private")
